2014-10-23  Richard Frith-Macdonald <rfm@gnu.org>

	* EcCommand.m:
	* Control.plist:
	Add LaunchOrder config to control the order in which services are
	handled by the Command server.  By default we now do them in
	lexicographic order rather than leaving the order undefined.

2014-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* EcCommand.m: Simplify handling of loss of process and configuration
	error alarms.  Clear such alarms when we receive a ping from the
	process.
	EcLogger.[hm]: Add documentation in the header, plus a new method to
	make subclassing a bit easier.  Fix bug in naming of config keys.

2014-09-04  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Fix missing clear after unable to register with name
	server.

2014-09-02  Richard Frith-Macdonald <rfm@gnu.org>

	* EcControl.m: If a Command server on a host registers and we already
	have a Command server registered, have the new registration replace
	the old one rather than rejecting it.  The aim is to handle a race
	condition where a Command server is re-registering after some network
	problem and the old registration is still in place.
	* EcAlerter.m: Add more debug logging to show what elarms/alerts are
	handled by what rules.

2014-07-30  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Added +ecSetup method to create/initialise the singleton instance.

2014-07-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Command.m:
	* Control.m:
	Implement auto-restart ...
	Run a 'Watcher' process as a daemon with the actual server as a
	subtask.  If the subtask dies with a status other than zero,
	restart it after a 30 second delay.

2014-06-20  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Make sure the NSHost cache is flushed at least
	once per minute (by -ecNewMinute:) so that any stale information
	is replaced reasonably promptly.

2014-05-16  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmDestination.m: Perform all connection operations in